# nyc-taxi-pipeline

./: .env.example  .gitignore  .sqlfluff  Dockerfile  LICENSE  README.md  changelog.md  contributing.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: taxi_pipeline.py
airflow/tasks/: dbt_run.py  delta_optimize.py  gx_validate.py  ingest.py  load.py  spark_transform.py
cli/: README.md  __init__.py  airflow_client.py  config.py  exceptions.py  main.py
cli/commands/: backfill.py  logs.py  run.py  status.py
dags/: bronze_dag.py  gold_dag.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/: schema.yml  sources.yml
dbt/models/gold/: agg_hourly_metrics.sql  agg_zone_summary.sql  dim_date.sql  dim_vendor.sql  dim_zone.sql  fact_trips.sql  trip_metrics.sql  zone_summary.sql
dbt/models/silver/: schema.yml  silver_trips.sql
docker/: Dockerfile.bronze  Dockerfile.gold  dockerfile.bronze
docs/: PRD.md  pipeline.md
pipeline/: __init__.py  exceptions.py  settings.py  spark_session.py
pipeline/bronze/: __init__.py  ingestor.py  validator.py
pipeline/gold/: __init__.py  loader.py  run_logger.py
pipeline/silver/: init.py
sql/: backfill_status.sql  create_tables.sql
tests/: __init__.py  conftest.py  test_dag_integrity.py  test_exceptions.py  test_settings.py  test_settings_integration.py
tests/bronze/: __init__.py  test_ingestor.py  test_ingestor_integration.py
tests/cli/: __init__.py  test_airflow_client.py
tests/gold/: __init__.py  test_loader.py  test_loader_integration.py  test_run_logger.py  test_run_logger_integration.py
tests/silver/: __init__.py
