[project]
name = "cab-spark-data-pipeline"
version = "0.1.0"
description = "NYC taxi batch pipeline — Bronze (Postgres) → Silver (dbt) → Gold (Delta Lake)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "VenkatAmit" }]

dependencies = [
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.3",
    "great-expectations>=0.18",
    "apache-airflow>=2.9",
]

[project.optional-dependencies]
spark = [
    "pyspark==3.4.*",
    "delta-spark>=2.4",
]
cli = [
    "typer>=0.12",
    "httpx>=0.27",
]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "black>=24.4",
    "isort>=5.13",
]

[project.scripts]
cab = "cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline", "cli"]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "black>=24.4",
    "isort>=5.13",
    "pre-commit>=3.7",
]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["pipeline", "cli", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "TID", "ANN", "RUF"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"pipeline" = { msg = "cli/ must not import from pipeline/. Use the Airflow REST API instead." }

[tool.ruff.lint.per-file-ignores]
"tests/**"        = ["ANN"]
"pipeline/**"     = ["TID251"]
"dags/**"         = ["TID251"]
"cli/commands/**" = ["ANN"]
"cli/main.py"     = ["ANN"]

[tool.ruff.lint.isort]
known-first-party = ["pipeline", "cli"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
known_first_party = ["pipeline", "cli"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
pretty = true

# Packages with missing or partial stubs
[[tool.mypy.overrides]]
module = [
    "pyspark.*",
    "delta.*",
    "great_expectations.*",
    "pyarrow.*",
    "typer",
]
ignore_missing_imports = true

# Typer decorators are untyped
[[tool.mypy.overrides]]
module = [
    "cli.main",
    "cli.commands.run",
    "cli.commands.status",
    "cli.commands.backfill",
    "cli.commands.logs",
]
disallow_untyped_decorators = false

# GX and pyarrow have incomplete stubs — suppress return type warnings
[[tool.mypy.overrides]]
module = [
    "pipeline.bronze.validator",
    "pipeline.bronze.ingestor",
    "pipeline.gold.loader",
]
warn_return_any = false

# cli.config instantiates pydantic-settings classes — mypy can't see env vars
[[tool.mypy.overrides]]
module = ["cli.config"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
